--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "react-slick": "^0.29.0",
     "sass": "^1.51.0",
     "swiper": "^8.1.4",
